Change Picture: Update camera mode switch labels.

Camera: Switch to camera mode.
Video: Switch to video recorder.

Bug: 777354
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: Ie7b911c0eb0e3c3a329b80be24056598779a294e
Reviewed-on: https://chromium-review.googlesource.com/770147
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Commit-Queue: David Reveman <reveman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#516855}
Former-commit-id: d26c4db292d4f734aa007a2879de3004264c3b9f