chrome/browser/ui/webui/chromeos/login/user_image_screen_handler.cc
@@ -95,7 +95,10 @@ void UserImageScreenHandler::DeclareLocalizedValues(
                IDS_USER_IMAGE_SCREEN_DESCRIPTION);
   builder->Add("takePhoto", IDS_OPTIONS_CHANGE_PICTURE_TAKE_PHOTO);
   builder->Add("discardPhoto", IDS_OPTIONS_CHANGE_PICTURE_DISCARD_PHOTO);
-  builder->Add("switchMode", IDS_OPTIONS_CHANGE_PICTURE_SWITCH_MODE);
+  builder->Add("switchModeToCamera",
+               IDS_OPTIONS_CHANGE_PICTURE_SWITCH_MODE_TO_CAMERA);
+  builder->Add("switchModeToVideo",
+               IDS_OPTIONS_CHANGE_PICTURE_SWITCH_MODE_TO_VIDEO);
   builder->Add("profilePhoto", IDS_IMAGE_SCREEN_PROFILE_PHOTO);
   builder->Add("profilePhotoLoading",
                IDS_IMAGE_SCREEN_PROFILE_LOADING_PHOTO);
