ui/webui/resources/cr_elements/chromeos/cr_picture/cr_picture_list.js
@@ -31,7 +31,6 @@ Polymer({
     oldImageLabel: String,
     profileImageLabel: String,
     takePhotoLabel: String,
-    switchModeLabel: String,
 
     /**
      * The currently selected item. This property is bound to the iron-selector
