ui/webui/resources/cr_elements/chromeos/cr_picture/cr_picture_pane.js
@@ -43,7 +43,8 @@ Polymer({
     discardImageLabel: String,
     previewAltText: String,
     takePhotoLabel: String,
-    switchModeLabel: String,
+    switchModeToCameraLabel: String,
+    switchModeToVideoLabel: String,
 
     /** Whether camera video mode is enabled */
     cameraVideoModeEnabled: Boolean,
